spelled stuff out

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <script src="jquery-2.1.0.js"></script>
     <script src="main.js"></script>
-    <script src="js/widgetHandler.js"></script>
+    <script src="js/eventHandler.js"></script>
     <script src="js/widgetOne.js"></script>
     <script src="js/widgetTwo.js"></script>
 
@@ -11,6 +11,9 @@
   </head>
   <body>
     <section>
+        <h2>Put a breakpoint in eventHandler.js line 8</h2>
+        <p>The events are loosely coupled however you can still step to the executed code without having to search for it.</p>
+
         <div id="widget1"></div>
         <div id="widget2"></div>
     </section>
